input background color

--- a/css/style.css
+++ b/css/style.css
@@ -171,6 +171,7 @@ body {
     color: #333333;
     border-radius: 5px;
     padding: 0 10px;
+    background-color: #fff;
 }
 .subscription_form fieldset {
     margin: 2px 4px;
